2020-08-19
	* PCI bus scan (kmw)

2020-08-16
	* basic kprintf implementation--no format strings yet (kmw)
	* kprintf now supports unsigned integer-to-decimal conversions (kmw)
	* uint->hexadecimal conversion added to kprintf (kmw)
	* removed superseded debug_print_uint64 function now that kprintf is working (kmw)
	* memory blocks returned by kmalloc() are 8-byte aligned (kmw)

2020-08-15
	* console driver infrastructure and vga console driver (kmw)
	* removed old, superseded console subsystem (kmw)

2020-08-11
	* put check in vga text-mode driver to prevent writing past end of text-mode memory area (kmw)

2020-08-10
	* kernel video interface and vga text-mode driver (kmw)

2020-08-05
	* added raw keyboard driver (kmw)

2020-07-12:
	* update cursor location after writing to system console (kmw)

2020-07-11:
	* remap PIC, add skeleton IRQ handlers (kmw)
	* read system date and time from CMOS RTC (kmw)

2020-07-09:
	* added asm_[in, out]* functions (kmw)

2020-07-08:
	* fixed issue in bootloader (kmw)
	|> int 13h had been instructed to load beyond the 63 sector-per-track limit

2020-06-01:
	* kfree() will now join contiguous free blocks together (kmw)

2020-05-13:
	* added uitoa3() (kmw)
	|> this converts 64-bit unsigned integers (can be cast if shorter) to
	|> strings w/o needing dynamic memory allocation, which means it can be
	|> used before the mmu is initialized

2020-05-12:
	* added consWriteLine() (kmw)