@@ -1,4 +1,5 @@
 2020-08-19
+	* VGA console driver now interprets tab characters (kmw)
 	* PCI bus scan (kmw)
 
 2020-08-16
